--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,17 +3,17 @@
   "name": "Where in the World",
   "icons": [
     {
-      "src": "flag-icon.svg",
+      "src": "images/earth.svg",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/svg"
     },
     {
-      "src": "flag-icon.svg",
+      "src": "images/earth.svg",
       "type": "image/svg",
       "sizes": "192x192"
     },
     {
-      "src": "flag-icon.svg",
+      "src": "images/earth.svg",
       "type": "image/svg",
       "sizes": "512x512"
     }
